reviewed and updated code for accuracy and started report template

--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -462,7 +462,7 @@
     "\n",
     "# Split the data using train_test_split\n",
     "# Assign a random_state of 1 to the function\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y)"
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, random_state=1)"
    ]
   },
   {
@@ -552,7 +552,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9440652416930746"
+       "0.9520479254722232"
       ]
      },
      "execution_count": 10,
@@ -574,8 +574,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[18663    94]\n",
-      " [   67   560]]\n"
+      "[[18663   102]\n",
+      " [   56   563]]\n"
      ]
     }
    ],
@@ -596,10 +596,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "          0       1.00      0.99      0.89      1.00      0.94      0.90     18757\n",
-      "          1       0.86      0.89      0.99      0.87      0.94      0.88       627\n",
+      "          0       1.00      0.99      0.91      1.00      0.95      0.91     18765\n",
+      "          1       0.85      0.91      0.99      0.88      0.95      0.90       619\n",
       "\n",
-      "avg / total       0.99      0.99      0.90      0.99      0.94      0.90     19384\n",
+      "avg / total       0.99      0.99      0.91      0.99      0.95      0.91     19384\n",
       "\n"
      ]
     }
@@ -675,8 +675,8 @@
     {
      "data": {
       "text/plain": [
-       "0    56279\n",
-       "1    56279\n",
+       "0    56271\n",
+       "1    56271\n",
        "Name: loan_status, dtype: int64"
       ]
      },
@@ -735,7 +735,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9956061486114828"
+       "0.9936781215845847"
       ]
      },
      "execution_count": 16,
@@ -757,8 +757,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[18652   105]\n",
-      " [    2   625]]\n"
+      "[[18649   116]\n",
+      " [    4   615]]\n"
      ]
     }
    ],
@@ -779,10 +779,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "          0       1.00      0.99      1.00      1.00      1.00      0.99     18757\n",
-      "          1       0.86      1.00      0.99      0.92      1.00      0.99       627\n",
+      "          0       1.00      0.99      0.99      1.00      0.99      0.99     18765\n",
+      "          1       0.84      0.99      0.99      0.91      0.99      0.99       619\n",
       "\n",
-      "avg / total       1.00      0.99      1.00      0.99      1.00      0.99     19384\n",
+      "avg / total       0.99      0.99      0.99      0.99      0.99      0.99     19384\n",
       "\n"
      ]
     }
@@ -808,7 +808,7 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** The balanced accuracy score if higher for the oversampled data. The logistic regression model that used the original imbalanced data did equally to the oversampled data making predictions for the 1 class."
+    "**Answer:** The balanced accuracy score if higher for the oversampled data. The logistic regression model that used the original imbalanced data did equally to the oversampled data making predictions for high risk loans."
    ]
   }
  ],
