--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -269,7 +269,7 @@
     "y=df['loan_status']\n",
     "\n",
     "# Separate the X variable, the features\n",
-    "x=df.drop(columns=['loan_status'])"
+    "X=df.drop(columns=['loan_status'])"
    ]
   },
   {
@@ -411,7 +411,7 @@
    ],
    "source": [
     "# Review the X variable DataFrame\n",
-    "x.head()"
+    "X.head()"
    ]
   },
   {
@@ -462,7 +462,7 @@
     "\n",
     "# Split the data using train_test_split\n",
     "# Assign a random_state of 1 to the function\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, random_state=1)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)"
    ]
   },
   {
@@ -511,7 +511,7 @@
     "logistic_regression_model = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using training data\n",
-    "logistic_regression_model.fit(x_train, y_train)"
+    "logistic_regression_model.fit(X_train, y_train)"
    ]
   },
   {
@@ -528,7 +528,7 @@
    "outputs": [],
    "source": [
     "# Make a prediction using the testing data\n",
-    "test_predictions = logistic_regression_model.predict(x_test)"
+    "y_pred = logistic_regression_model.predict(X_test)"
    ]
   },
   {
@@ -562,7 +562,7 @@
    ],
    "source": [
     "# Print the balanced_accuracy score of the model\n",
-    "balanced_accuracy_score(y_test, test_predictions)"
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -581,13 +581,12 @@
    ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "training_matrix = confusion_matrix(y_test, test_predictions)\n",
-    "print(training_matrix)"
+    "print(confusion_matrix(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +606,7 @@
    "source": [
     "# Print the classification report for the model\n",
     "# Save a classification report\n",
-    "training_report = classification_report_imbalanced(y_test, test_predictions)\n",
+    "training_report = classification_report_imbalanced(y_test, y_pred)\n",
     "\n",
     "# Then view its output\n",
     "print(training_report)"
@@ -626,7 +625,7 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** The logistic regression model healthy loans at 100% efficacy."
+    "**Answer:** The classification report that I set as training report shows the precision of healthy loans set at 100% efficacy. The recall is also near perfect at 99%. When reviewing the high risk loans, the precision results comeback lower at 85% with 91% efficacy for the recall. Due to the imbalance, more resampling will be taken place."
    ]
   },
   {
@@ -652,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,12 +663,12 @@
     "random_oversampler = RandomOverSampler(random_state=1)\n",
     "\n",
     "# Fit the original training data to the random_oversampler model\n",
-    "x_resampled, y_resampled = random_oversampler.fit_resample(x_train, y_train)"
+    "x_resampled, y_resampled = random_oversampler.fit_resample(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +679,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,10 +707,10 @@
     "model = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using the resampled training data\n",
-    "lr_model=model.fit(x_resampled, y_resampled)\n",
+    "lr_model=model.fit(X_resampled, y_resampled)\n",
     "\n",
     "# Make a prediction using the testing data\n",
-    "y_predictions = lr_model.predict(x_test)"
+    "y_predictions = lr_model.predict(X_test)"
    ]
   },
   {
@@ -729,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +737,7 @@
        "0.9936781215845847"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -808,8 +807,15 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** The balanced accuracy score if higher for the oversampled data. The logistic regression model that used the original imbalanced data did equally to the oversampled data making predictions for high risk loans."
+    "**Answer:** The balanced accuracy score if higher for the oversampled data. The logistic regression model that used the original imbalanced data did equally to the oversampled data making predictions for high risk loans. Where you see the greatest difference is the recall percentage for high risk loans improving to 99%. When counting the resampled data, you notice that the sample size for high risk loans increased to an equal amount to the healthy loans. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
