--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -807,15 +807,8 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** The balanced accuracy score if higher for the oversampled data. The logistic regression model that used the original imbalanced data did equally to the oversampled data making predictions for high risk loans. Where you see the greatest difference is the recall percentage for high risk loans improving to 99%. When counting the resampled data, you notice that the sample size for high risk loans increased to an equal amount to the healthy loans. "
+    "**Answer:** The balanced accuracy score is higher for the oversampled data. The precision of healthy loans from the original imbalanced data is equal to that of the oversampled data. Where you see the greatest difference is the recall percentage for high risk loans that improved to 99%."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
