commit of before final review

--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -770,7 +770,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
